parser.output
Grammar

    0 $accept: program $end

    1 program: program stmt
    2        | /* empty */

    3 stmt: create_stmt SEMICOLON
    4     | insert_stmt SEMICOLON
    5     | select_stmt SEMICOLON

    6 create_stmt: CREATE TABLE IDENT '(' column_list ')'

    7 column_list: IDENT
    8            | column_list ',' IDENT

    9 insert_stmt: INSERT INTO IDENT VALUES value_list

   10 value_list: value
   11           | value_list ',' value

   12 value: NUMBER
   13      | IDENT

   14 select_stmt: SELECT STAR FROM IDENT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6
')' (41) 6
',' (44) 8 11
error (256)
IDENT (258) 6 7 8 9 13 14
NUMBER (259) 12
CREATE (260) 6
TABLE (261) 6
INSERT (262) 9
SELECT (263) 14
FROM (264) 14
STAR (265) 14
SEMICOLON (266) 3 4 5
VALUES (267) 9
INTO (268) 9


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
program (18)
    on left: 1 2, on right: 0 1
stmt (19)
    on left: 3 4 5, on right: 1
create_stmt (20)
    on left: 6, on right: 3
column_list (21)
    on left: 7 8, on right: 6 8
insert_stmt (22)
    on left: 9, on right: 4
value_list (23)
    on left: 10 11, on right: 9 11
value (24)
    on left: 12 13, on right: 10 11
select_stmt (25)
    on left: 14, on right: 5


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    1 program: program . stmt

    $end    shift, and go to state 2
    CREATE  shift, and go to state 3
    INSERT  shift, and go to state 4
    SELECT  shift, and go to state 5

    stmt         go to state 6
    create_stmt  go to state 7
    insert_stmt  go to state 8
    select_stmt  go to state 9


state 2

    0 $accept: program $end .

    $default  accept


state 3

    6 create_stmt: CREATE . TABLE IDENT '(' column_list ')'

    TABLE  shift, and go to state 10


state 4

    9 insert_stmt: INSERT . INTO IDENT VALUES value_list

    INTO  shift, and go to state 11


state 5

   14 select_stmt: SELECT . STAR FROM IDENT

    STAR  shift, and go to state 12


state 6

    1 program: program stmt .

    $default  reduce using rule 1 (program)


state 7

    3 stmt: create_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 13


state 8

    4 stmt: insert_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 14


state 9

    5 stmt: select_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 15


state 10

    6 create_stmt: CREATE TABLE . IDENT '(' column_list ')'

    IDENT  shift, and go to state 16


state 11

    9 insert_stmt: INSERT INTO . IDENT VALUES value_list

    IDENT  shift, and go to state 17


state 12

   14 select_stmt: SELECT STAR . FROM IDENT

    FROM  shift, and go to state 18


state 13

    3 stmt: create_stmt SEMICOLON .

    $default  reduce using rule 3 (stmt)


state 14

    4 stmt: insert_stmt SEMICOLON .

    $default  reduce using rule 4 (stmt)


state 15

    5 stmt: select_stmt SEMICOLON .

    $default  reduce using rule 5 (stmt)


state 16

    6 create_stmt: CREATE TABLE IDENT . '(' column_list ')'

    '('  shift, and go to state 19


state 17

    9 insert_stmt: INSERT INTO IDENT . VALUES value_list

    VALUES  shift, and go to state 20


state 18

   14 select_stmt: SELECT STAR FROM . IDENT

    IDENT  shift, and go to state 21


state 19

    6 create_stmt: CREATE TABLE IDENT '(' . column_list ')'

    IDENT  shift, and go to state 22

    column_list  go to state 23


state 20

    9 insert_stmt: INSERT INTO IDENT VALUES . value_list

    IDENT   shift, and go to state 24
    NUMBER  shift, and go to state 25

    value_list  go to state 26
    value       go to state 27


state 21

   14 select_stmt: SELECT STAR FROM IDENT .

    $default  reduce using rule 14 (select_stmt)


state 22

    7 column_list: IDENT .

    $default  reduce using rule 7 (column_list)


state 23

    6 create_stmt: CREATE TABLE IDENT '(' column_list . ')'
    8 column_list: column_list . ',' IDENT

    ')'  shift, and go to state 28
    ','  shift, and go to state 29


state 24

   13 value: IDENT .

    $default  reduce using rule 13 (value)


state 25

   12 value: NUMBER .

    $default  reduce using rule 12 (value)


state 26

    9 insert_stmt: INSERT INTO IDENT VALUES value_list .
   11 value_list: value_list . ',' value

    ','  shift, and go to state 30

    $default  reduce using rule 9 (insert_stmt)


state 27

   10 value_list: value .

    $default  reduce using rule 10 (value_list)


state 28

    6 create_stmt: CREATE TABLE IDENT '(' column_list ')' .

    $default  reduce using rule 6 (create_stmt)


state 29

    8 column_list: column_list ',' . IDENT

    IDENT  shift, and go to state 31


state 30

   11 value_list: value_list ',' . value

    IDENT   shift, and go to state 24
    NUMBER  shift, and go to state 25

    value  go to state 32


state 31

    8 column_list: column_list ',' IDENT .

    $default  reduce using rule 8 (column_list)


state 32

   11 value_list: value_list ',' value .

    $default  reduce using rule 11 (value_list)
